--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,8 +79,10 @@ flutter:
           weight: 400
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/car1.png
+     - assets/images/setting.png
+     - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
