--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
      - assets/images/car2.png
      - assets/images/plus.png
      - assets/images/car3.png
+     - assets/images/car4.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
