--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^0.13.5
   flutter_barcode_scanner: ^2.0.0
+  sweetalert: ^0.0.1
 
 dev_dependencies:
   flutter_test:
