--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
      - assets/images/iconscan.png
      - assets/images/iconMenu.png
      - assets/images/Profile.png
+     - assets/images/iconalert.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
