--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
      - assets/images/car3.png
      - assets/images/car4.png
      - assets/images/iconscan.png
+     - assets/images/iconscan2.png
      - assets/images/iconMenu.png
      - assets/images/Profile.png
      - assets/images/iconalert.png
