--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   rflutter_alert: ^2.0.4
   sweetalert: ^0.0.1
+  animated_splash_screen: ^1.3.0
+  lottie: ^1.4.3
 
 dev_dependencies:
   flutter_test:
