--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sweetalert: ^0.0.1
   animated_splash_screen: ^1.3.0
   lottie: ^1.4.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
