--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,8 @@ flutter:
      - assets/images/iconMenu.png
      - assets/images/Profile.png
      - assets/images/iconalert.png
+     - assets/images/loadingcircles.json
+     - assets/images/correct.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
