--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^1.4.3
   intl: ^0.17.0
+  auto_size_text: ^3.0.0
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
