--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   auto_size_text: ^3.0.0
   sizer: ^2.0.15
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
