--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - assets/images/plus.png
     - assets/images/car3.png
     - assets/images/car4.png
+    - assets/images/findcar.png
     - assets/images/iconscan.png
     - assets/images/iconscan2.png
     - assets/images/iconMenu.png
