--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   auto_size_text: ^3.0.0
   sizer: ^2.0.15
   url_launcher: ^6.1.6
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
